# WealthLens_Test

./: README.md  package-lock.json  start_wealthlens.ps1  test_connection.js
Backend/: .env.example  .gitignore  check_api_keys.py  deep_research.py  deep_search.py  enhanced_financial_tools.py  enhanced_web_search.py  frontend.py  ingest.py  main.py  models.py  pyproject.toml  requirements.txt  retrieval_grader.py  run.py  setup_api_keys.py  setup_backend.py  simple_server.py  start_server.py  start_wealthlens.bat  start_wealthlens.ps1  summarizer.py  test_backend.py  test_enhanced_search.py  test_financial_tools.py  tools.py  vars.py
Backend/data/: ingested_financial_basics.txt
Backend/docs/: outputs.md  prompts.md  query.md
Frontend/: .env.example  MOBILE_SETUP.md  app.json  package-lock.json  package.json
Frontend/app/: _layout.tsx  home.tsx  index.tsx  landing.tsx
Frontend/app/(auth)/: _layout.tsx  index.tsx  login.tsx  signup.tsx
Frontend/app/(main)/: _layout.tsx  ai-finance.tsx  currency-converter.tsx  dashboard.tsx  expenses.tsx  goals.tsx  index.tsx  investments.tsx  learning-hub.tsx  (+1 more)
Frontend/components/: BankAccountManager.tsx  Button.tsx  Card.tsx  FloatingChatButton.tsx  Header.tsx  Input.tsx  PricingSection.tsx  ProfileDropdown.tsx  Sidebar.tsx
Frontend/config/: api.ts
Frontend/contexts/: AuthContext.tsx  ThemeContext.tsx
Frontend/data/: mockData.ts
Frontend/hooks/: useChatHistory.ts  useFrameworkReady.ts  useResponsive.ts
Frontend/services/: chatbotApi.ts  exchangeRateService.ts  learningContentService.ts
Frontend/types/: index.ts
(+13 files in other folders)
