[project]
name = "final-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agno>=1.3.5",
    "dotenv>=0.9.9",
    "langchain>=0.3.24",
    "langchain-chroma>=0.2.3",
    "langchain-community>=0.3.22",
    "langchain-core>=0.3.55",
    "langchain-groq>=0.3.2",
    "langchain-ollama>=0.3.2",
    "langchain-text-splitters>=0.3.8",
    "pydantic>=2.11.3",
    "rich>=14.0.0",
    "streamlit>=1.44.1",
    "tavily-python>=0.5.4",
    "termcolor>=3.0.1",
    "typing>=3.10.0.0",
    "uuid>=1.30",
    "yfinance>=0.2.55",
]
